After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705163 - systemd: Check errors on all D-Bus calls
systemd: Check errors on all D-Bus calls
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-30 18:16 UTC by Matthias Clasen
Modified: 2013-07-30 18:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
systemd: Check errors on all D-Bus calls (3.25 KB, patch)
2013-07-30 18:16 UTC, Matthias Clasen
accepted-commit_now Details | Review

Description Matthias Clasen 2013-07-30 18:16:50 UTC
A somewhat common crash in F19 happens when one of these calls
fails, and we end up freeing a wild pointer. See
https://bugzilla.redhat.com/show_bug.cgi?id=977575
Comment 1 Matthias Clasen 2013-07-30 18:16:52 UTC
Created attachment 250498 [details] [review]
systemd: Check errors on all D-Bus calls
Comment 2 Ray Strode [halfline] 2013-07-30 18:20:10 UTC
Review of attachment 250498 [details] [review]:

looks good, though I wonder why this is getting hit frequently... suggests there's a bigger bug of some sort.