systemd: Check errors on all D-Bus calls

A somewhat common crash in F19 happens when one of these calls
fails, and we end up freeing a wild pointer. See
https://bugzilla.redhat.com/show_bug.cgi?id=977575

https://bugzilla.gnome.org/show_bug.cgi?id=705163